--- a/calc-assignment/pom.xml
+++ b/calc-assignment/pom.xml
@@ -1,4 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>devops-calc</groupId>
+    <artifactId>Maven</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>devops-calc</groupId>
   <artifactId>calc-assignment</artifactId>
